Enable preview for javadoc plugin.